[gd_scene load_steps=52 format=3 uid="uid://dn047toebgmea"]

[ext_resource type="Texture2D" uid="uid://ii8bg32utt3r" path="res://art/Enemies/Boss/Necromancer/Necromancer_creativekind-Sheet.png" id="1_c5sl8"]
[ext_resource type="Script" path="res://script/Enemy/Boss/Necromancer.gd" id="1_cr6yp"]
[ext_resource type="Shader" path="res://art/Shader/Necromancer.gdshader" id="2_qhhrg"]
[ext_resource type="Texture2D" uid="uid://dpqeg5l0shcvh" path="res://art/Shadows/LargeShadow.png" id="4_c6qnm"]
[ext_resource type="Texture2D" uid="uid://bm44t051sxqcm" path="res://art/Effects/Spell casting Magic Symbol 01 Small 256x256 Green.png" id="5_2ldg8"]
[ext_resource type="Shader" path="res://art/Shader/Blink.gdshader" id="5_jnapb"]
[ext_resource type="Script" path="res://script/Box/hurt_box.gd" id="5_rsreh"]
[ext_resource type="Script" path="res://script/Enemy/Boss/FiniteStateMachine.gd" id="6_4uy1o"]
[ext_resource type="Script" path="res://script/Enemy/gun.gd" id="6_jc3b3"]
[ext_resource type="Script" path="res://script/Enemy/Boss/Idle.gd" id="7_f5oi2"]
[ext_resource type="Script" path="res://script/Enemy/Boss/Summon.gd" id="8_dkrcb"]
[ext_resource type="PackedScene" uid="uid://dxl5kd6b6x110" path="res://scenes/Enemy/necromancerFire.tscn" id="8_udug7"]
[ext_resource type="Script" path="res://script/Enemy/Boss/Attack.gd" id="12_1veek"]
[ext_resource type="Script" path="res://script/Enemy/Boss/Death.gd" id="14_e6cwx"]
[ext_resource type="Texture2D" uid="uid://pw4yne386yma" path="res://art/Effects/Particle/31.png" id="15_1jm61"]
[ext_resource type="PackedScene" uid="uid://0cgjopmw7jb4" path="res://scenes/Box/hit_box.tscn" id="15_3r3hq"]
[ext_resource type="Shader" path="res://art/Shader/necroExplosion.gdshader" id="15_wvxut"]
[ext_resource type="AudioStream" uid="uid://bhd6o2edhsnvk" path="res://art/Music and Sounds/Spells/thunder.mp3" id="18_k54el"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cau8n"]
shader = ExtResource("2_qhhrg")
shader_parameter/outline_color = null

[sub_resource type="AtlasTexture" id="AtlasTexture_xqtyp"]
atlas = ExtResource("5_2ldg8")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_kenv0"]
atlas = ExtResource("5_2ldg8")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4v37"]
atlas = ExtResource("5_2ldg8")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5bbx"]
atlas = ExtResource("5_2ldg8")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhyrw"]
atlas = ExtResource("5_2ldg8")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrxth"]
atlas = ExtResource("5_2ldg8")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpwnt"]
atlas = ExtResource("5_2ldg8")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd8k6"]
atlas = ExtResource("5_2ldg8")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k5m4"]
atlas = ExtResource("5_2ldg8")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4c7v"]
atlas = ExtResource("5_2ldg8")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bachf"]
atlas = ExtResource("5_2ldg8")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d18ua"]
atlas = ExtResource("5_2ldg8")
region = Rect2(768, 512, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_1j4g6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqtyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kenv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4v37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5bbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhyrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrxth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpwnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd8k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k5m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4c7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bachf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d18ua")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_mibuk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:material:shader")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_qhhrg")]
}

[sub_resource type="Animation" id="Animation_kuo8p"]
resource_name = "death"
length = 1.25001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6), Vector2i(6, 6), Vector2i(7, 6), Vector2i(8, 6)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.125),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_loot"
}]
}

[sub_resource type="Animation" id="Animation_7ugtm"]
resource_name = "idle"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_d8vkv"]
resource_name = "ranged_attack"
length = 2.12501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(9, 4), Vector2i(10, 4), Vector2i(11, 4), Vector2i(12, 4), Vector2i(13, 4), Vector2i(14, 4), Vector2i(15, 4), Vector2i(16, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/Attack")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.375),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_e2aj3"]
resource_name = "run"
length = 1.00001
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_hcog2"]
resource_name = "skill"
length = 1.62501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3), Vector2i(8, 3), Vector2i(9, 3), Vector2i(10, 3), Vector2i(11, 3), Vector2i(12, 3)]
}

[sub_resource type="Animation" id="Animation_jhu5u"]
resource_name = "summon"
length = 1.62501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/Summon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_omrj4"]
_data = {
"RESET": SubResource("Animation_mibuk"),
"death": SubResource("Animation_kuo8p"),
"idle": SubResource("Animation_7ugtm"),
"ranged_attack": SubResource("Animation_d8vkv"),
"run": SubResource("Animation_e2aj3"),
"skill": SubResource("Animation_hcog2"),
"summon": SubResource("Animation_jhu5u")
}

[sub_resource type="Animation" id="Animation_4572i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_qhhrg")]
}

[sub_resource type="Animation" id="Animation_u7i3t"]
resource_name = "blink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_qhhrg"), ExtResource("5_jnapb"), ExtResource("2_qhhrg"), ExtResource("5_jnapb"), ExtResource("2_qhhrg")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gw8og"]
_data = {
"RESET": SubResource("Animation_4572i"),
"blink": SubResource("Animation_u7i3t")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tm6ve"]
radius = 7.0
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_52um6"]
height = 42.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hl5ga"]
radius = 160.29

[sub_resource type="CircleShape2D" id="CircleShape2D_wgkw6"]
radius = 336.006

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_id415"]
radius = 9.0
height = 38.0

[sub_resource type="CircleShape2D" id="CircleShape2D_k0r8w"]
radius = 51.3517

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iddjc"]
shader = ExtResource("15_wvxut")
shader_parameter/particles_anim_h_frames = 6
shader_parameter/particles_anim_v_frames = 2
shader_parameter/particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m843i"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 50.0
gravity = Vector3(0, 0, 0)
anim_speed_min = 0.5
anim_speed_max = 1.0

[node name="Node2D" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_cr6yp")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_cau8n")
position = Vector2(0, -42)
texture = ExtResource("1_c5sl8")
hframes = 17
vframes = 7
frame = 51

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
show_behind_parent = true
position = Vector2(0, 48)
texture = ExtResource("4_c6qnm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprite2D"]
show_behind_parent = true
position = Vector2(1, 28)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_1j4g6")
frame = 11
frame_progress = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_omrj4")
}
autoplay = "idle"

[node name="Blink" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gw8og")
}

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(1, -14)
shape = SubResource("CapsuleShape2D_tm6ve")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 16
script = ExtResource("5_rsreh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, -13)
shape = SubResource("CapsuleShape2D_52um6")

[node name="PlayerDet" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8388608

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDet"]
position = Vector2(1, -12)
shape = SubResource("CircleShape2D_hl5ga")

[node name="BossBar" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8388608

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossBar"]
unique_name_in_owner = true
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_wgkw6")
debug_color = Color(0.842938, 0.208622, 0.783674, 0.42)

[node name="Origin" type="Node2D" parent="."]
position = Vector2(0, -9)

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Gun" type="Node2D" parent="."]
position = Vector2(1, -14)
rotation = 1.5379
script = ExtResource("6_jc3b3")
bullet = ExtResource("8_udug7")
bullet_num = 3
arc = 10.0
fire_rate = 0.5

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("6_4uy1o")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_f5oi2")

[node name="Summon" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_dkrcb")

[node name="Attack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("12_1veek")

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("14_e6cwx")

[node name="HitBox" parent="." instance=ExtResource("15_3r3hq")]
collision_layer = 8
collision_mask = 8
damage = 10

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(1, -13)
shape = SubResource("CapsuleShape2D_id415")

[node name="Explosion" parent="." instance=ExtResource("15_3r3hq")]
collision_layer = 8
collision_mask = 8
damage = 15

[node name="CollisionShape2D" parent="Explosion" index="0"]
position = Vector2(1, -13)
shape = SubResource("CircleShape2D_k0r8w")

[node name="ExplosionTimer" type="Timer" parent="Explosion"]
wait_time = 8.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="Explosion"]
show_behind_parent = true
material = SubResource("ShaderMaterial_iddjc")
position = Vector2(1, -14)
emitting = false
amount = 20
sub_emitter = NodePath(".")
process_material = SubResource("ParticleProcessMaterial_m843i")
texture = ExtResource("15_1jm61")
one_shot = true
explosiveness = 1.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Explosion"]
stream = ExtResource("18_k54el")
volume_db = 1.0

[node name="ExplosionCheck" parent="." instance=ExtResource("15_3r3hq")]
collision_mask = 8388608
damage = 15

[node name="CollisionShape2D" parent="ExplosionCheck" index="0"]
position = Vector2(1, -13)
shape = SubResource("CircleShape2D_k0r8w")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="PlayerDet" to="FiniteStateMachine/Idle" method="_on_player_det_body_entered"]
[connection signal="body_entered" from="BossBar" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="BossBar" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="Explosion/ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
[connection signal="area_entered" from="ExplosionCheck" to="." method="_on_explosion_check_area_entered"]

[editable path="HitBox"]
[editable path="Explosion"]
[editable path="ExplosionCheck"]
